@@ -20,6 +20,13 @@
 # Time in seconds between updates of the $SYS tree.
 #sys_interval 10
 
+# Time in seconds between cleaning the internal message store of unreferenced
+# messages. Lower values will result in lower memory usage but more processor
+# time, higher values will have the opposite effect.
+# Setting a value of 0 means the unreferenced messages will be disposed of as
+# quickly as possible.
+#store_clean_interval 10
+
 # Write process id to a file. Default is a blank string which means a pid file
 # shouldn't be written.
 # This should be set to /var/run/mosquitto.pid if mosquitto is being run
